First page edits.

--- a/site/index.html
+++ b/site/index.html
@@ -1,10 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta charset="utf-8">
-	<title>Hello Coursera!</title>
+	<meta charset="utf-9">
+	<title>Coursera Week 1 Instructions</title>
 </head>
 <body>
-<h1>Coursera Week 1 Assignment</h1>
+<style > 
+h1 {color:palevioletred;}
+h1 {text-align: center;}
+h1 {font-family:Helvetica;}
+h2 {font-family:Helvetica;}
+h2 {text-indent: 50px;}
+p {font-family:Helvetica;}
+</style>
+<h1>Coursera Week 1: Development Environment Setup</h1>
+<h2>MacOS Setup:</h2>
+<p> 
+<a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/lecture/4T1t0/development-environment-setup-part-3-github-and-browser-sync">BrowserSync Instructions</a>
+</p>
 </body>
 </html>
