--- a/site/index.html
+++ b/site/index.html
@@ -10,7 +10,7 @@ h1 {color:palevioletred;}
 h1 {text-align: center;}
 h1 {font-family:Helvetica;}
 h2 {font-family:Helvetica;}
-h2 {text-indent: 50px;}
+p {text-indent: 30px;}
 p {font-family:Helvetica;}
 </style>
 <h1>Coursera Week 1: Development Environment Setup</h1>
