--- a/site/index.html
+++ b/site/index.html
@@ -16,7 +16,7 @@ p {font-family:Helvetica;}
 <h1>Coursera Week 1: Development Environment Setup</h1>
 <h2>MacOS Setup:</h2>
 <p> 
-<a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/lecture/4T1t0/development-environment-setup-part-3-github-and-browser-sync">BrowserSync Instructions</a>
+<a href="https://www.coursera.org/learn/html-css-javascript-for-web-developers/lecture/4T1t0/development-environment-setup-part-3-github-and-browser-sync">Lecture Instructions</a>
 </p>
 </body>
 </html>
