--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -5,6 +5,29 @@
 	<title>Module 2 Assignment</title>
 </head>
 <body>
-<h1> Module 2 Assignment</h1>
+<h1>Module 2 Assignment</h1>
+<style> 
+h1 {text-align: center;}
+h2 {color: white;}
+h1 {font-family:Helvetica;}
+h2 {font-family:Helvetica;}
+h2 {background-color:palevioletred;display:inline-block;}
+h2.big {background-color:turquoise;display:inline-block;}
+p {text-indent: 50px;}
+p {font-family:Verdana;}
+#Section1 {color: palevioletred;}
+#Section2 {color: turquoise;}
+</style>
+<h2>Tacos</h2> 
+<div id= "Section1">
+<p>Beef</p>
+<p>Chicken</p>
+</div>
+<h2 class="big">Cocktails </h3>
+<div id="Section2">
+<p>Margarita</p>
+<p>Mojito</p>
+<p></p>
+</div>
 </body>
 </html>
