--- a/module2-solution/index.html
+++ b/module2-solution/index.html
@@ -3,135 +3,126 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Responsive Layout</title>
+<title>Our Menu</title>
 <style>
 
 /********** Base styles **********/
 * {
   box-sizing: border-box;
-}
-h1 {
-  margin-bottom: 15px;
+  font-family: verdana;
 }
 
+h1 {text-align: center;}
 p {
   border: 1px solid black;
-  background-color: #A52A2A;
-  width: 90%;
-  height: 150px;
-  margin-right: auto;
-  margin-left: auto;
-  font-family: Helvetica;
-  color: white;
+  margin-bottom: 15px;
+  font-size: 17px;
+  float: left;
+  float: down;
+
+  
 }
 
-/* Simple Responsive Framework. */
-.row {
-  width: 100%;
+div#container {
 }
 
+#p1 {
+  background-color: deepskyblue;
+  width: 33%;
+  height: 500px;
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+
+}
+#p2 {
+  background-color:palevioletred;
+  width: 33%;
+  height: 500px;
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#p3 {
+  background-color:deepskyblue;
+  width: 33%;
+  height: 500px;
+  padding-top: 50px;
+  padding-left: 20px;
+  padding-right: 20px;
+}
+
+#p4 {
+  background-color:paleturquoise;
+  margin-top: -164px;
+  margin-left: 400px;
+}
+
+#p5 {
+  background-color:turquoise;
+  margin-top: -164px;
+  margin-left: 900px;
+}
+
+#p6 {
+  background-color:darkturquoise;
+  margin-top: -164px;
+  margin-left: 1360px;
+}
 /********** Large devices only **********/
-@media (min-width: 1200px) {
-  .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    float: left;
-    border: 1px solid green;
+@media (min-width: 992px) {
+  #p1 {
+    width: 33%px;
+    height: 150px;  }
+  #p2 {
+    width: 33%px;
+    height: 150px;
   }
-  .col-lg-1 {
-    width: 8.33%;
-  }
-  .col-lg-2 {
-    width: 16.66%;
-  }
-  .col-lg-3 {
-    width: 25%;
-  }
-  .col-lg-4 {
-    width: 33.33%;
-  }
-  .col-lg-5 {
-    width: 41.66%;
-  }
-  .col-lg-6 {
-    width: 50%;
-  }
-  .col-lg-7 {
-    width: 58.33%;
-  }
-  .col-lg-8 {
-    width: 66.66%;
-  }
-  .col-lg-9 {
-    width: 74.99%;
-  }
-  .col-lg-10 {
-    width: 83.33%;
-  }
-  .col-lg-11 {
-    width: 91.66%;
-  }
-  .col-lg-12 {
-    width: 100%;
+  #p3 {
+    width: 33%px;
+    height: 150px;
   }
 }
 
 /********** Medium devices only **********/
-@media (min-width: 992px) and (max-width: 1199px) {
-  .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
-    float: left;
-    border: 1px solid green;
+@media (min-width: 768px) and (max-width: 991px) {
+  #p1 {
+    width: 33%px;
+    height: 150px; 
+    float: left; 
   }
-  .col-md-1 {
-    width: 8.33%;
+  #p2 {
+    width: 33%;
+    height: 150px;
+    float: left; 
   }
-  .col-md-2 {
-    width: 16.66%;
+  #p3 {
+    width: 33%;
+    height: 150px;
+    float: left; 
   }
-  .col-md-3 {
-    width: 25%;
-  }
-  .col-md-4 {
-    width: 33.33%;
-  }
-  .col-md-5 {
-    width: 41.66%;
-  }
-  .col-md-6 {
-    width: 50%;
-  }
-  .col-md-7 {
-    width: 58.33%;
-  }
-  .col-md-8 {
-    width: 66.66%;
-  }
-  .col-md-9 {
-    width: 74.99%;
-  }
-  .col-md-10 {
-    width: 83.33%;
-  }
-  .col-md-11 {
-    width: 91.66%;
-  }
-  .col-md-12 {
-    width: 100%;
+  body {
+    background-color: blue;
   }
 }
 
 </style>
 </head>
 <body>
-<h1>Responsive Layout</h1>
+<h1>Our Menu</h1>
 
-<div class="row">
-  <div class="col-lg-3 col-md-6"><p>Item 1</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 2</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 3</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 4</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 5</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 6</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 7</p></div>
-  <div class="col-lg-3 col-md-6"><p>Item 8</p></div>
+<p id="p1">Our pollo asado! spicy chipotle rubbed grilled Cascade Farms
+chicken with crema from Ochoa Queseria, spicy salsa de arbol &
+pico de gallo</p>
+<p id="p2">Cascade Farms chopped flank steak, served traditional style with
+grilled onion & topped with spicy salsa de arbol, cilantro & onion</p>
+<p id="p3">Sushi is a traditional Japanese dish of prepared vinegared rice, usually with some sugar and salt, accompanying a variety of ingredients, such as seafood, often raw, and vegetables</p>
+
+<div id="container">
+  <p id="p4"> Chicken</p>
+  <p id="p5"> Beef</p>
+  <p id="p6">Sushi</p>
 </div>
 
 </body>
